# oneul-emergency

./: .gitignore  README.md  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/core/: settings.py
backend/app/providers/: emergency.py  pharmacy.py  public_data_client.py
backend/app/routes/: emergency_rooms.py  geocode.py  pharmacies.py
backend/app/services/: geo.py  open_status.py
backend/tests/: test_deployment_files.py  test_emergency_parser.py  test_emergency_routes.py  test_geo.py  test_geocode_routes.py  test_health.py  test_open_status.py  test_pharmacy_parser.py  test_pharmacy_routes.py  test_public_data_client.py  test_settings.py
backend/tests/fixtures/: emergency_rooms_sample.xml  pharmacies_sample.xml
docs/: data-api-design.md  implementation-plan.md  product-requirements.md  technical-design.md  ux-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: FacilityCard.test.tsx  FacilityCard.tsx  FacilityDetail.tsx  FacilityList.test.tsx  FacilityList.tsx  LocationPrompt.test.tsx  LocationPrompt.tsx  MapPreview.tsx
frontend/src/pwa/: registerServiceWorker.test.ts  registerServiceWorker.ts
frontend/src/test/: app-search.test.tsx  deployment-config.test.ts  pwa.test.ts  smoke.test.tsx  style-contract.test.ts
